--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,11 +33,11 @@
 
   .style-first-span {
     @apply p-3 inline-block first-line:uppercase first-line:tracking-widest
-      first-letter:text-4xl first-letter:font-normal first-letter:text-white font-serif;
+      first-letter:font-normal first-letter:text-white font-serif;
   }
 
   .style-list {
     @apply text-white font-bold rounded-full  
-      bg-[#00BAC7] flex justify-center items-center text-lg;
+      bg-[#00BAC7] flex justify-center items-center;
   }
 }
